build: adicionando referência entre os projetos

--- a/concessionaria-intelectah-desafio/Concessionaria.MVC/Concessionaria.MVC.csproj
+++ b/concessionaria-intelectah-desafio/Concessionaria.MVC/Concessionaria.MVC.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Concessionaria.Application\Concessionaria.Application.csproj" />
+  </ItemGroup>
+
 </Project>
