--- a/concessionaria-intelectah-desafio/Concessionaria.Application/Concessionaria.Application.csproj
+++ b/concessionaria-intelectah-desafio/Concessionaria.Application/Concessionaria.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Concessionaria.Domain\Concessionaria.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
