--- a/concessionaria-intelectah-desafio/Concessionaria.Infrastructure/Concessionaria.Infrastructure.csproj
+++ b/concessionaria-intelectah-desafio/Concessionaria.Infrastructure/Concessionaria.Infrastructure.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Concessionaria.Application\Concessionaria.Application.csproj" />
+  </ItemGroup>
+
 </Project>
