fix: alterando nomenclatura do projeto devido a conflito com entidade

--- a/concessionaria-intelectah-desafio/Concessionaria.Application/ConcessionariaApp.Application.csproj
+++ b/concessionaria-intelectah-desafio/Concessionaria.Application/ConcessionariaApp.Application.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Concessionaria.Application\Concessionaria.Application.csproj" />
+    <ProjectReference Include="..\Concessionaria.Domain\ConcessionariaApp.Domain.csproj" />
   </ItemGroup>
 
 </Project>
