--- a/concessionaria-intelectah-desafio/Concessionaria.Infrastructure/ConcessionariaApp.Infrastructure.csproj
+++ b/concessionaria-intelectah-desafio/Concessionaria.Infrastructure/ConcessionariaApp.Infrastructure.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Concessionaria.Domain\Concessionaria.Domain.csproj" />
+    <ProjectReference Include="..\Concessionaria.Application\ConcessionariaApp.Application.csproj" />
   </ItemGroup>
 
 </Project>
