--- a/concessionaria-intelectah-desafio/Concessionaria.MVC/ConcessionariaApp.MVC.csproj
+++ b/concessionaria-intelectah-desafio/Concessionaria.MVC/ConcessionariaApp.MVC.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Concessionaria.Application\Concessionaria.Application.csproj" />
-    <ProjectReference Include="..\Concessionaria.IoC\Concessionaria.IoC.csproj" />
+    <ProjectReference Include="..\Concessionaria.Application\ConcessionariaApp.Application.csproj" />
+    <ProjectReference Include="..\Concessionaria.IoC\ConcessionariaApp.IoC.csproj" />
   </ItemGroup>
 
 </Project>
