--- a/concessionaria-intelectah-desafio/Concessionaria.Infrastructure/ConcessionariaApp.Infrastructure.csproj
+++ b/concessionaria-intelectah-desafio/Concessionaria.Infrastructure/ConcessionariaApp.Infrastructure.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\Concessionaria.Application\ConcessionariaApp.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Config\" />
+  </ItemGroup>
+
 </Project>
