--- a/concessionaria-intelectah-desafio/Concessionaria.MVC/appsettings.Development.json
+++ b/concessionaria-intelectah-desafio/Concessionaria.MVC/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "SqlConnection": "Data Source=DESKTOP-6F7Q82U\\SQLEXPRESS;Initial Catalog=ConcessionariaDatabase;Integrated Security=True; TrustServerCertificate=True;",
+    "RedisConnection": "localhost:6379"
+  },
   "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
