--- a/concessionaria-intelectah-desafio/ConcessionariaApp.MVC/ConcessionariaApp.MVC.csproj
+++ b/concessionaria-intelectah-desafio/ConcessionariaApp.MVC/ConcessionariaApp.MVC.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Concessionaria.Application\ConcessionariaApp.Application.csproj" />
+    <ProjectReference Include="..\Concessionaria.IoC\ConcessionariaApp.IoC.csproj" />
+  </ItemGroup>
+
 </Project>
