fix: durante alteração de namespace a soluction e projetos foram impactados

--- a/concessionaria-intelectah-desafio/ConcessionariaApp.Application/ConcessionariaApp.Application.csproj
+++ b/concessionaria-intelectah-desafio/ConcessionariaApp.Application/ConcessionariaApp.Application.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Concessionaria.Domain\ConcessionariaApp.Domain.csproj" />
+    <ProjectReference Include="..\ConcessionariaApp.Domain\ConcessionariaApp.Domain.csproj" />
   </ItemGroup>
 
 </Project>
