--- a/concessionaria-intelectah-desafio/ConcessionariaApp.Infrastructure/ConcessionariaApp.Infrastructure.csproj
+++ b/concessionaria-intelectah-desafio/ConcessionariaApp.Infrastructure/ConcessionariaApp.Infrastructure.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Concessionaria.Application\ConcessionariaApp.Application.csproj" />
+    <ProjectReference Include="..\ConcessionariaApp.Application\ConcessionariaApp.Application.csproj" />
   </ItemGroup>
 
 </Project>
