--- a/concessionaria-intelectah-desafio/ConcessionariaApp.Application/ConcessionariaApp.Application.csproj
+++ b/concessionaria-intelectah-desafio/ConcessionariaApp.Application/ConcessionariaApp.Application.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,7 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="UseCases\Login\Query\BuscaRoleUsuario\" />
+    <Folder Include="UseCases\Login\Queries\BuscaRoleUsuario\" />
+    <Folder Include="UseCases\Veiculos\Commands\NovaPasta\" />
     <Folder Include="UseCases\Veiculos\Queries\" />
   </ItemGroup>
 
