feat: implementação final

--- a/concessionaria-intelectah-desafio/ConcessionariaApp.MVC/appsettings.Development.json
+++ b/concessionaria-intelectah-desafio/ConcessionariaApp.MVC/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlConnection": "Data Source=DESKTOP-6F7Q82U\\SQLEXPRESS;Initial Catalog=ConcessionariaDatabase;Integrated Security=True; TrustServerCertificate=True;",
+    "SqlConnection": "Server=tcp:helena-app.database.windows.net,1433;Initial Catalog=IntelecthDesafioDB;Persist Security Info=False;User ID=helena-user-azure;Password=Megaw@re21;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
     "RedisConnection": "localhost:6379"
   },
   "Logging": {
