--- a/concessionaria-intelectah-desafio/ConcessionariaApp.MVC/appsettings.json
+++ b/concessionaria-intelectah-desafio/ConcessionariaApp.MVC/appsettings.json
@@ -1,9 +1,12 @@
 {
+  "ConnectionStrings": {
+    "SqlConnection": "Server=tcp:helena-app.database.windows.net,1433;Initial Catalog=IntelecthDesafioDB;Persist Security Info=False;User ID=helena-user-azure;Password=Megaw@re21;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "RedisConnection": "localhost:6379"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
