fix: removendo logica nao nescessaria da apricação

--- a/concessionaria-intelectah-desafio/ConcessionariaApp.Application/ConcessionariaApp.Application.csproj
+++ b/concessionaria-intelectah-desafio/ConcessionariaApp.Application/ConcessionariaApp.Application.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <Folder Include="UseCases\Login\Queries\BuscaRoleUsuario\" />
+    <Folder Include="UseCases\Vendas\Queries\" />
   </ItemGroup>
 
   <ItemGroup>
