feat: implementando relatorio analitico de vendas

--- a/concessionaria-intelectah-desafio/ConcessionariaApp.MVC/ConcessionariaApp.MVC.csproj
+++ b/concessionaria-intelectah-desafio/ConcessionariaApp.MVC/ConcessionariaApp.MVC.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\ConcessionariaApp.IoC\ConcessionariaApp.IoC.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Relatorio\Partial\" />
+  </ItemGroup>
+
 </Project>
