--- a/concessionaria-intelectah-desafio/ConcessionariaApp.MVC/appsettings.json
+++ b/concessionaria-intelectah-desafio/ConcessionariaApp.MVC/appsettings.json
@@ -1,8 +1,8 @@
 {
-  "ConnectionStrings": {
-    "SqlConnection": "Server=tcp:helena-app.database.windows.net,1433;Initial Catalog=IntelecthDesafioDB;Persist Security Info=False;User ID=helena-user-azure;Password=Megaw@re21;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
-    "RedisConnection": "localhost:6379"
-  },
+    "ConnectionStrings": {
+        "SqlConnection": "Server=tcp:helena-app.database.windows.net,1433;Initial Catalog=IntelecthDesafioDB;Persist Security Info=False;User ID=helena-user-azure;Password=Megaw@re21;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+        "RedisConnection": "liberal-muskrat-52808.upstash.io:6379,password=Ac5IAAIjcDEwNTYzNzljNTZhYjM0YjJiOWI4YmQ2MDU0YTQwZjgzY3AxMA,ssl=True"
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
