--- a/concessionaria-intelectah-desafio/ConcessionariaApp.MVC/ConcessionariaApp.MVC.csproj
+++ b/concessionaria-intelectah-desafio/ConcessionariaApp.MVC/ConcessionariaApp.MVC.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Views\Relatorio\Partial\" />
+    <Folder Include="bin\Debug\net8.0\" />
   </ItemGroup>
 
 </Project>
